--- a/fire_career_homepage.html
+++ b/fire_career_homepage.html
@@ -53,3 +53,4 @@
 </body>
 </html>
 <section class="bg-cover bg-center" style="background-image: url('your-image.jpg')">
+<section class="bg-cover bg-center text-white py-32 px-6 text-center" style="background-image: url('https://images.unsplash.com/photo-1544716278-ca5e3f4abd8c?auto=format&fit=crop&w=1470&q=80');">
